# rust-tute

./: .gitignore  README.md
cross-build/: README.md
cross-build/xcli/: Cargo.toml  Cross.toml
cross-build/xcli/src/: main.rs
guessing_game/: Cargo.toml  README.md
guessing_game/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
hello_world/: main.rs
maint/: README.md
maint/dlq_analysis/: Cargo.toml  README.md
maint/dlq_analysis/src/: main.rs
maint/make_gds_migrate_list/: Cargo.toml  README.md
maint/make_gds_migrate_list/src/: lib.rs  main.rs
maint/post_ingest/: Cargo.toml
maint/post_ingest/src/: main.rs
modsys/: README.md
modsys/restaurant/: Cargo.toml
modsys/restaurant/src/: front_of_house.rs  lib.rs  main.rs
modsys/restaurant/src/front_of_house/: hosting.rs
primer/: Cargo.toml  README.md
primer/src/: custom_type.rs  file_io.rs  main.rs  var.rs
testing/: README.md
testing/adder/: Cargo.toml
testing/adder/src/: lib.rs
testing/adder/tests/: integration_test.rs
testing/adder/tests/common/: mod.rs
testing/foo/: Cargo.toml
