[package]
name = "post_ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = [] }
